Edit index.html and style.css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,115 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <title>Pet4Life</title>
   </head>
-  <body></body>
+  <body>
+    <!-- ========== Start NavBar ========== -->
+    <header>
+      <div class="container">
+        <a class="logo" href="">
+          <img src="./images/dog.png" alt="" />
+        </a>
+        <nav>
+          <ul class="nav-links">
+            <li class="list-item"><a href="">Home</a></li>
+            <li class="list-item"><a href="">Pet Adoption</a></li>
+            <li class="list-item"><a href="">Sign in</a></li>
+            <li class="list-item"><a href="">Contact Us</a></li>
+          </ul>
+        </nav>
+      </div>
+      <!-- ========== End NavBar ========== -->
+    </header>
+
+    <!-- ========== Start Hero ========== -->
+    <body>
+      <section class="hero">
+        <div class="container">
+          <div class="hero__left">
+            <h1>Best Place to Adopt a Pet</h1>
+            <p class="hero-text">
+              It is always wonderful to adopt pets. Adopting the ones from such
+              places means that you can offer those underprivileged little
+              friends a new home.
+            </p>
+            <button class="btn">Sign Up</button>
+          </div>
+          <div class="hero__right">
+            <img src="./images/Adopt a pet-amico.png" alt="" />
+          </div>
+        </div>
+      </section>
+      <!-- ========== End Hero ========== -->
+
+      <section class="feature-section">
+        <h1>show your Love ❤</h1>
+        <div class="container">
+          <ul class="feature-list">
+            <li>
+              <img src="./images/guinea-pig-gcc76213d3_1920.jpg" alt="" />
+              <blockquote>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptates, ab.
+              </blockquote>
+            </li>
+            <li>
+              <img src="./images/cat-g6934f4617_1920.jpg" alt="" />
+              <blockquote>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptates, ab.
+              </blockquote>
+            </li>
+            <li>
+              <img src="./images/puppy-g0e97d6a33_1920.jpg" alt="" />
+              <blockquote>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptates, ab.
+              </blockquote>
+            </li>
+            <li>
+              <img src="./images/rabbit-g2c931751e_1920.jpg" alt="" />
+              <blockquote>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptates, ab.
+              </blockquote>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="quote-section">
+        <p>
+          Animals have come to mean so much in our lives. We live in a
+          fragmented and disconnected culture. Politics are ugly, religion is
+          struggling, technology is stressful, and the economy is unfortunate.
+          What’s one thing that we have in our lives that we can depend on? A
+          dog or a cat loving us unconditionally, every day, very faithfully.
+        </p>
+        <cite> – Jon Katz</cite>
+      </section>
+
+      <section class="call-to-action">
+        <div class="callToAction">
+          <div class="call-1">
+            <h3>For latest update about new pet arrival</h3>
+            <p>
+              sign up with us to keep you updated with the list of available
+              adoption pets's
+            </p>
+          </div>
+          <button class="btn-call">Sign Up</button>
+        </div>
+      </section>
+    </body>
+
+    <footer>
+      <p class="cp-txt">&copy; Copyright 2022 Abdul Hakeem</p>
+    </footer>
+  </body>
 </html>
