--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               adoption pets's
             </p>
           </div>
-          <button class="btn-call">Sign Up</button>
+          <a class="btn-call" type="button">Sign Up</a>
         </div>
       </section>
     </body>
